--- a/views/footer.jade
+++ b/views/footer.jade
@@ -7,7 +7,11 @@
       p
         a(rel='license', href='http://creativecommons.org/licenses/by-sa/3.0/us/')
           &#40;&#x2184;&#41;
-        span(class='date') &emsp;&emsp;2011
+        span(class='date')
+          &emsp;2011
+        &emsp;Ethan W. Brown&emsp;
+        a(href='#wrapper')
+          ^
         //
           img(alt='Creative Commons License', src='/images/cc.gif')
           span(xmlns:dc='http://purl.org/dc/elements/1.1/', href='http://purl.org/dc/dcmitype/InteractiveResource', property='dc:title', rel='dc:type')
