--- a/views/footer.jade
+++ b/views/footer.jade
@@ -10,7 +10,7 @@
         span(class='date')
           &emsp;2011
         &emsp;Ethan W. Brown&emsp;
-        a(href='#wrapper')
+        a(href='#wrapper', target='_self')
           ^
         //
           img(alt='Creative Commons License', src='/images/cc.gif')
