--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,8 +6,7 @@ body{
   line-height: 24px;
   background: #fff;
   width: 100%;
-  font-family: Arial;
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, FreeSerif, serif;
+  font-family: "Bookman Old Style", "URW Bookman L", Georgia, serif;
 }
 
 /* Basic typesetting */
