--- a/views/index.jade
+++ b/views/index.jade
@@ -13,24 +13,22 @@
   .leftguy
     .content
       h2
-        a(href='#ephemera') Ephemera
+        a(href='#ephemera', target='_self') Ephemera
   .rightguy
     .content
       #lifestream
       p
-        a(href='#footer', onClick="LSPlus()") +
+        a(href='#footer', target='_self', onClick='LSPlus()') +
         &emsp;/&emsp;
-        a(href='#footer', onClick="LSMinus()") -
+        a(href='#footer', target='_self', onClick='LSMinus()') -
 .module#eterna
   .leftguy
     .content
       h2
-        a(href='#eterna') Eterna
+        a(href='#eterna', target='_self') Eterna
   .rightguy
     .content
         p
-          a(href='http://google.com/reader/shared/Ethan.W.Brown') Google Reader
-          &emsp;&emsp;
           a(href='http://www.zotero.org/efang') Zotero
           &emsp;&emsp;
           a(href='http://ethanwbrown.tumblr.com') Tumblr
@@ -40,12 +38,14 @@
           a(href='http://twitter.com/ethanwbrown') Twitter
           &emsp;&emsp;
           a(href='http://last.fm/user/etano') Last.fm
+          &emsp;&emsp;
+          a(href='http://www.linkedin.com/pub/ethan-brown/45/a09/435') LinkedIn
 //
   #you.module.middle
     .leftguy
       .content
         h2
-          a(href='#you') you
+          a(href='#you', target='_self') you
     .rightguy
       .content
         #browserinfo
