--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,6 +20,7 @@ html(lang="en")
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
+  base(target="_top")
   body
     #wrapper
       #main
