--- a/views/index.jade
+++ b/views/index.jade
@@ -18,9 +18,9 @@
     .content
       #lifestream
       p
-        a(href='#footer', target='_self', onClick='LSPlus()') +
+        a(href='#footer', target='_self', onMouseOver='LSPlus()') +
         &emsp;/&emsp;
-        a(href='#footer', target='_self', onClick='LSMinus()') -
+        a(href='#footer', target='_self', onMouseOver='LSMinus()') -
 .module#eterna
   .leftguy
     .content
