--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@ body{
   margin: 0 auto 0 auto;
   padding: 0 auto;
   color: #777;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 24px;
   background: #fff;
   width: 100%;
@@ -14,7 +14,7 @@ body{
 h1{
   margin: 0 0 15px 0;
   padding: 0;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: normal;
 }
 
@@ -22,7 +22,7 @@ h2{
   padding: 0 2em 0 0;
   margin: 0;
   font-weight: normal;
-  font-size: 16px;
+  font-size: 14px;
   color: #ccc;
   text-align: right;
 }
@@ -168,8 +168,8 @@ code{
 }
 
 #lifestream li a {
-  font-weight: bold;
-  color: #555;
+  font-weight: normal;
+  color: #333;
 }
 
 #lifestream li span a {
