--- a/views/footer.jade
+++ b/views/footer.jade
@@ -8,8 +8,10 @@
         a(rel='license', href='http://creativecommons.org/licenses/by-sa/3.0/us/')
           &#40;&#x2184;&#41;
         span(class='date')
-          &emsp;2011
-        &emsp;Ethan W. Brown&emsp;
+          &emsp;2012
+        // &emsp;
+        // span.mailme etano foo etano bar net
+        &emsp;
         a(href='#wrapper', target='_self')
           ^
         //
