--- a/views/index.jade
+++ b/views/index.jade
@@ -5,10 +5,11 @@
   .rightguy
     .content
       h1
-        a(href='https://plus.google.com/108508864811676828361/posts') My name is Ethan W Brown.
+        span I am 
+        a(href='https://plus.google.com/108508864811676828361/posts') Ethan W Brown
+        span .
       p
-        span.mailme etano foo etano bar net
-        span.tag or something.
+        span Physics / Internet / Ullr
 .module#ephemera
   .leftguy
     .content
@@ -31,7 +32,7 @@
         p
           a(href='http://www.zotero.org/efang') Zotero
           &emsp;&emsp;
-          a(href='http://ethanwbrown.tumblr.com') Tumblr
+          a(href='http://ohgreatthatsreallywonderful.tumblr.com') Tumblr
           &emsp;&emsp;
           a(href='http://github.com/etano') Github
           &emsp;&emsp;
