--- a/views/index.jade
+++ b/views/index.jade
@@ -5,9 +5,9 @@
   .rightguy
     .content
       h1
-        span I am 
+        \I am 
         a(href='https://plus.google.com/108508864811676828361/posts') Ethan W Brown
-        span .
+        .
       p
         span Physics / Internet / Ullr
 .module#ephemera
@@ -62,8 +62,8 @@
       });
 
 
-script(src='/javascripts/colorgrad.min.js', type='text/javascript', charset='utf-8')
+script(src='/javascripts/colorgrad.js', type='text/javascript', charset='utf-8')
 script(src='/javascripts/jquery.emailhide.min.js', type='text/javascript', charset='utf-8')
 script(src='/javascripts/jquery-lifestream/jquery.lifestream.min.js', type='text/javascript', charset='utf-8')
 script(src='/javascripts/jquery-timeago/jquery.timeago.min.js', type='text/javascript', charset='utf-8')
-script(src='/javascripts/lifestream.min.js', type='text/javascript', charset='utf-8')
+script(src='/javascripts/lifestream.js', type='text/javascript', charset='utf-8')
