--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,10 @@
 body{
-  margin: 0 auto 0 auto;
-  padding: 0 auto;
+  margin: 0;
+  padding: 0;
   color: #777;
   font-size: 14px;
   line-height: 24px;
-  background: #fff;
+  background: #f5f5f5;
   width: 100%;
   font-family: "Bookman Old Style", "URW Bookman L", Georgia, serif;
 }
@@ -55,7 +55,7 @@ h1 a:hover {
 }
 
 h2 a:link, h2 a:visited, h2 a:active {
-  color: #ccc;
+  color: #aaa;
 }
 
 h2 a:hover {
@@ -66,12 +66,13 @@ h2 a:hover {
 
 .date{
   margin: 0em;
+  color: #aaa;
   font-weight: normal;
 }
 
 abbr, acronym, span.abbr {
   cursor: help;
-  border-bottom: 1px dotted #777;
+  border-bottom: 1px dotted #aaa;
 }
 
 code{
@@ -96,8 +97,10 @@ code{
 }
 
 #main{
-  margin: 30px 0 0 0;
-  padding: 0;
+  margin: 30px;
+  padding: 45px 0 30px 30px;
+  background: #FFFFFF;
+  width: 780px;
 }
 
 .module{
@@ -164,12 +167,11 @@ code{
 #lifestream li {
   margin: 0 0 15px 0;
   padding: 0;
-  color: #777;
+  color: #aaa;
 }
 
 #lifestream li a {
   font-weight: normal;
-  color: #333;
 }
 
 #lifestream li span a {
@@ -177,8 +179,18 @@ code{
 }
 
 #lifestream li:hover, h3:hover {
-  color: #aaa;
+  color: #333;
 }
 
 #lifestream .timeago {
+}
+
+/* Defaults */
+
+.lifestream a, .name:hover {
+  color: #F87572;
+}
+
+p a:link, p a:visited, p a:hover, p a:active, .via a {
+  color: #333;
 }
