--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,7 @@ html(lang="en")
     link(rel='stylesheet', href='/stylesheets/style.css')
     // link(rel='alternate stylesheet', type='text/css', media='screen', title='style0', href='/stylesheets/style0.css')
     // link(rel='alternate stylesheet', type='text/css', media='screen', title='style1', href='/stylesheets/style1.css')
-    link(rel='stylesheet', type='text/css', media='screen', title='style2', href='/stylesheets/style2.css')
+    // link(rel='stylesheet', type='text/css', media='screen', title='style2', href='/stylesheets/style2.css')
     // script(type='text/javascript', src='/javascripts/styleswitcher.js')
     script(src='/javascripts/jquery/dist/jquery.min.js')
     // script(language="JavaScript", src="http://www.geoplugin.net/javascript.gp", type="text/javascript")
