--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body{
   margin: 0;
   padding: 0;
-  color: #777;
+  color: #aaa;
   font-size: 14px;
   line-height: 24px;
   background: #f5f5f5;
@@ -23,17 +23,12 @@ h2{
   margin: 0;
   font-weight: normal;
   font-size: 14px;
-  color: #ccc;
   text-align: right;
 }
 
 p{
   margin: 0 0 15px 0;
   padding: 0;
-}
-
-#footer p{
-  color: #ccc;
 }
 
 a:link, a:visited, a:active {
