--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,15 +2,10 @@
 html(lang="en")
   head
     title= title
-    // link(href='/javascripts/jquery-lifestream/css/lifestream.css', rel='stylesheet', type='text/css')
     link(rel='shortcut icon', type='image/x-icon', href='/javascripts/jquery-lifestream/images/favicon.ico')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    // link(rel='alternate stylesheet', type='text/css', media='screen', title='style0', href='/stylesheets/style0.css')
-    // link(rel='alternate stylesheet', type='text/css', media='screen', title='style1', href='/stylesheets/style1.css')
-    // link(rel='stylesheet', type='text/css', media='screen', title='style2', href='/stylesheets/style2.css')
-    // script(type='text/javascript', src='/javascripts/styleswitcher.js')
     script(src='/javascripts/jquery/dist/jquery.min.js')
-    // script(language="JavaScript", src="http://www.geoplugin.net/javascript.gp", type="text/javascript")
+    script(language="JavaScript", src="http://www.geoplugin.net/javascript.gp", type="text/javascript")
     script(type='text/javascript')
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-414860-1']);
