some changes yet to be committed

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,10 +6,10 @@
     .content
       h1
         \I am 
-        a(href='https://plus.google.com/108508864811676828361/posts') Ethan W Brown
+        a(href='https://plus.google.com/108508864811676828361/posts') Ethan W. Brown
         .
       p
-        span Physics / Internet / Ullr
+        span Computational physicist
 .module#ephemera
   .leftguy
     .content
@@ -30,22 +30,12 @@
   .rightguy
     .content
         p
-          //
-            a(href='http://www.zotero.org/efang') Zotero
-            &emsp;&emsp;
-          //
-            a(href='http://ohgreatthatsreallywonderful.tumblr.com') Tumblr
-            &emsp;&emsp;
-          a(href='http://mendeley.com/groups/2855521/ethan-brown') Mendeley
-          &emsp;&emsp;
           a(href='http://github.com/etano') Github
           &emsp;&emsp;
           a(href='http://www.linkedin.com/pub/ethan-brown/45/a09/435') LinkedIn
           &emsp;&emsp;
           a(href='http://twitter.com/ethanwbrown') Twitter
-          //
-            &emsp;&emsp;
-            a(href='http://last.fm/user/etano') Last.fm
+
 //
   #you.module.middle
     .leftguy
@@ -55,7 +45,7 @@
     .rightguy
       .content
         #browserinfo
-
+  
   script(type="text/javascript")
     $.getJSON("http://jsonip.appspot.com?callback=?",
       function(data){
