--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@ body{
   color: #aaa;
   font-size: 14px;
   line-height: 24px;
-  background: #f5f5f5;
+  background: #fff;
   width: 100%;
   font-family: "Bookman Old Style", "URW Bookman L", Georgia, serif;
 }
@@ -92,8 +92,8 @@ code{
 }
 
 #main{
-  margin: 30px;
-  padding: 45px 0 30px 30px;
+  margin: 30px auto;
+  padding: 45px 0;
   background: #FFFFFF;
   width: 600px;
 }
