--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@
     .content
       h1
         \I am 
-        a(href='https://plus.google.com/108508864811676828361/posts') Ethan W. Brown
+        a(href='http://scholar.google.ch/citations?user=sXEThvMAAAAJ&hl=en') Ethan W. Brown
         .
       p
         span Computational physicist
