--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html(lang="en")
   head
     title= title
     link(rel='shortcut icon', type='image/x-icon', href='/javascripts/jquery-lifestream/images/favicon.ico')
-    link(rel='stylesheet', href='/stylesheets/style.min.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
     script(type='text/javascript').
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-414860-1']);
