--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,14 +5,12 @@ html(lang="en")
     link(rel='shortcut icon', type='image/x-icon', href='/javascripts/jquery-lifestream/images/favicon.ico')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type='text/javascript').
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-414860-1']);
-      _gaq.push(['_trackPageview']);
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-97838688-1', 'auto');
+      ga('send', 'pageview');
     meta(name="viewport", content="width=device-width, initial-scale=1")
   base(target="_top")
   body
